@@ -4005,17 +4005,8 @@ From sub-directory:
 	 * @return	void
 	 */
 	function updateWizard()	{
-		global $TYPO3_CONF_VARS;
-
 			// clear cache files
-		t3lib_extMgm::removeCacheFiles();
-
-			// generate new cache files and include them
-		$GLOBALS['TYPO3_CONF_VARS']['EXT']['extCache'] = 1;
-		$TYPO3_LOADED_EXT = t3lib_extMgm::typo3_loadExtensions();
-		if ($TYPO3_LOADED_EXT['_CACHEFILE'])	{
-			require(PATH_typo3conf.$TYPO3_LOADED_EXT['_CACHEFILE'].'_ext_localconf.php');
-		}
+		t3lib_extMgm::removeCacheFiles(t3lib_extMgm::getCacheFilePrefix());
 
 			// call wizard
 		$action = ($this->INSTALL['database_type']?$this->INSTALL['database_type']:'checkForUpdate');
